Connected index w/ home.css

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link type = "text/css" rel="stylesheet" href = "css/home.css"/>
         <title>Taylor Yetter</title>
     </head>
     <body>
