CSS Initial Format

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
         </div>
         
         <!--Intro to me-->
+        <div class = "intro">
         <p>Hello!</p>
-        <p>My name is Taylor Yetter, and I'm a tech enthusiast, university professional, and history aficionado located in St. Paul, Minnesota.</p>
+            <p>My name is Taylor Yetter, and I'm a tech enthusiast, university professional, and history aficionado located in St. Paul, Minnesota.</p>
+        </div>
     </body>
 </html>
