--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link type = "text/css" rel="stylesheet" href = "css/home.css"/>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
         <title>Taylor Yetter</title>
     </head>
     <body>
@@ -19,12 +20,12 @@
             <div class = "container">
                 <div>
                     <ul class = "nav-pills">
-                        <li><a href = "#">Home</a></li>
-                        <li><a href = "#">About</a></li>
-                        <li><a href = "#">Projects</a></li>
-                        <li><a href = "#">Experience</a></li>
-                        <li><a href = "#">Coursework</a></li>
-                        <li><a href = "#">Contact</a></li>
+                        <li><a class="btn btn-lg" href = "#">Home</a></li>
+                        <li><a class="btn btn-lg" href = "#">About</a></li>
+                        <li><a class="btn btn-lg" href = "#">Projects</a></li>
+                        <li><a class="btn btn-lg" href = "#">Experience</a></li>
+                        <li><a class="btn btn-lg" href = "#">Coursework</a></li>
+                        <li><a class="btn btn-lg" href = "#">Contact</a></li>
                     </ul>
                 </div>
             </div>
