--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
         </div>
         
-        <div class = "container">
+        <div class = "container main-page">
                 <div class="row">
                     
                     <!--Left column-->
